--- a/views/ranking.handlebars
+++ b/views/ranking.handlebars
@@ -13,6 +13,7 @@
         </tr>
     {{/each}}
 </table>
+<p class="centerLogin">Rank is only calculated and updated every 5 minutes.</p>
 <div class="container">
     <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
 </div>
