--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -15,10 +15,10 @@
 
 <div class="pContainer">
   <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
-  <button class="homeButton" onclick="location.href='/trade';" type="submit">Trade Now!</button>
+  <button class="homeButton" onclick="location.href='/trade';" type="submit">Trade Now</button>
+  <button class="homeButton" onclick="location.href='/viewtrades';" type="submit">View Trades</button>
   <button class="homeButton" onclick="location.href='/searchUsers';" type="submit">Search Users</button>
   <button class="homeButton" onclick="location.href='/ranking';" type="submit">Ranking Chart</button>
-  <button class="homeButton" onclick="location.href='/viewtrades';" type="submit">View Trades</button>
   <button class="homeButton" onclick="location.href='/viewCollections/{{userName}}';" type="submit">View Collections</button>
   <button class="homeButton" onclick="location.href='/logout';" type="submit">Logout</button>
 </div>
