--- a/views/tradeComplete.handlebars
+++ b/views/tradeComplete.handlebars
@@ -2,7 +2,7 @@
   <div>
     <h1>Congratulations
       {{sender}}, your trade request has been sent to
-      {{reciever}}</h1>
+      {{reciever}}.</h1>
     <h2>Details of your trade: </h2>
   </div>
 
@@ -40,6 +40,15 @@
     </ul>
   </div>
   <div class="container">
-    <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
+    <button
+      class="homeButton"
+      onclick="location.href='/protected';"
+      type="submit"
+    >Home Page</button>
+    <button
+      class="homeButton"
+      onclick="location.href='/viewtrades';"
+      type="submit"
+    >Check Trades</button>
   </div>
 </div>
