Added decline feature route, styling, function

--- a/views/tradeRequest.handlebars
+++ b/views/tradeRequest.handlebars
@@ -28,7 +28,16 @@
         class="homeButton button-style"
         type="submit"
         id="accept-trade"
+        name="action"
+        value="accept-trade"
       >Accept Trade</button>
+      <button
+        class="homeButton button-style"
+        type="submit"
+        id="decline-trade"
+        name="action"
+        value="decline-trade"
+      >Decline Trade</button>
 
       <div id="trade-out-div" class="centerLogin">
         <h3> You have the following outgoing trades: </h3>
