--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -445,3 +445,15 @@ tbody > tr:hover {
   color: #666; /* Dark grey text */
   cursor: not-allowed; /* Cursor indicates the button is disabled */
 }
+
+#currentTime {
+  display: inline;
+  padding-left: 5px;
+}
+
+.centerLoginElse {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-items: center;
+}
