--- a/views/searchUsers.handlebars
+++ b/views/searchUsers.handlebars
@@ -9,9 +9,9 @@
 <!-- Display search results -->
 <div id="searchResults" class="centerLogin">
 
-    {{#if users}}
+    {{#if user}}
     <h2>Search Results:</h2>
-        {{#each users}}
+        {{#each user}}
             <p>User found: {{this.userName}}</p>
             <form class="sendFriendRequestForm" action="/addFriend" method="post">
                 <input type="hidden" name="username" value="{{this.userName}}">
