Added back in a lot of things that were removed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,25 @@
 
   <body>
     <header>
+<div class="container">
+  {{#unless buttonsTurnedOff}}
+    {{#unless loggedIn}}
+      <button class="homeButton" onclick="location.href='/login';" type="submit">Login</button>
+    {{/unless}}
+    {{#if loggedIn}}
+      <button class="homeButton" onclick="location.href='/logout';" type="submit">Logout</button>
+      <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
+      <button class="homeButton" onclick="goBack()">Go Back</button>
+    {{/if}}
+  {{/unless}}
+</div>
 
+
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
     </header>
 
     <main>
