--- a/views/searchUsers.handlebars
+++ b/views/searchUsers.handlebars
@@ -5,21 +5,22 @@
     </div>
 </form>
 
-<!-- Display search results -->
 <div id="searchResults" class="centerLogin">
-    <!-- Results will be displayed here -->
-    <!-- If user found, display username and button to add as friend -->
-    {{#if user}}
-    <p class="centerLogin">User found: {{user.userName}}</p>
-    <form id="sendFriendRequestForm" action="/addFriend" method="post">
-        <div class="centerLogin">
-            <input type="hidden" id="receiverUsername" name="username" value="{{user.userName}}">
-            <button class="homeButton" type="submit" id="addFriendButton">Add as Friend</button>
-        </div>
-    </form>
+    {{#if users.length}}
+        <h2>Search Results:</h2>
+        {{#each users}}
+            <div>
+                <p class="centerLogin">User found: {{this.userName}}</p>
+                <form id="sendFriendRequestForm" action="/addFriend" method="post">
+                    <div class="centerLogin">
+                    <input type="hidden" id="receiverUsername" name="username" value="{{this.userName}}">
+                    <button class="homeButton" type="submit" id="addFriendButton">Add as Friend</button>
+                    </div>
+                </form>
+            </div>
+        {{/each}}
+    {{else}}
+    <p>No match for that search term</p>
     {{/if}}
-</div>
-<div class="container">
-    <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
 </div>
 <script src="/public/js/client_side_addUser.js"></script>
