--- a/views/protected.handlebars
+++ b/views/protected.handlebars
@@ -5,23 +5,29 @@
   <h2>Friend Requests:</h2>
   <ul>
     {{#each friendRequests}}
+    <p>Friend Request</p>
       <li>{{this}}</li>
+        <form class="acceptFriendRequestForm" action="/acceptFriendRequest" method="POST">
+          <input type="hidden" name="username" value="{{this}}">
+          <button type="submit" class="acceptrequest">Accept</button>
+        </form>
+        <form class="rejectFriendRequestForm"action="/rejectFriendRequest" method="POST">
+          <input type="hidden" name="username" value="{{this}}">
+          <button type="submit" class="rejectrequest">Reject</button>
+        </form>
     {{/each}}
   </ul>
-{{/if}}
-
-{{#if successMessage}}
-  <p>{{successMessage}}</p>
+  {{else}}
+  <p>No pending friend requests.</p>
 {{/if}}
 
 <div class="pContainer">
-  <button class="homeButton" onclick="location.href='/protected';" type="submit">Home Page</button>
   <button class="homeButton" onclick="location.href='/trade';" type="submit">Trade Now</button>
   <button class="homeButton" onclick="location.href='/viewtrades';" type="submit">View Trades</button>
   <button class="homeButton" onclick="location.href='/searchUsers';" type="submit">Search Users</button>
+  <button class="homeButton" onclick="location.href='/friendsList';" type="submit">List of Friends</button>
   <button class="homeButton" onclick="location.href='/ranking';" type="submit">Ranking Chart</button>
   <button class="homeButton" onclick="location.href='/viewCollections/{{userName}}';" type="submit">View Collections</button>
-  <button class="homeButton" onclick="location.href='/logout';" type="submit">Logout</button>
 </div>
 <script src="/public/js/client_side_addUser.js"></script>
 <script src="/public/js/timeScript.js"></script>
