Add description to login page, update readme, and createusertest

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<p class="centerLogin">The Pokémon TCG players web application is intended to digitize the old schoolhouse playground.  Users can collect, view, and trade with their friends.</p>
 <p class="centerLogin">Please log into your Pokemon account.</p>
 <form id="login-form" method="POST" action="/login">
 
