--- a/views/searchUsers.handlebars
+++ b/views/searchUsers.handlebars
@@ -1,8 +1,8 @@
 
 {{#if loggedIn}}
-<form id="searchUserForm" action="/searchUsers" method="post">
+<form id="searchUserForm-{{id}}" action="/searchUsers" method="post">
     <div class="centerLogin" style="margin-top:10px">
-        <input type="text" id="searchInput" name="username" placeholder="Enter username">
+        <input type="text" id="searchInput-{{id}}" name="username" placeholder="Enter username">
         <button class="homeButton" type="submit" style="margin-top:10px">Search</button>
     </div>
 </form>
@@ -17,15 +17,15 @@
         {{#each users}}
             <div>
                 <p class="centerLogin">User found: {{this.userName}}</p>
-                <form id="sendFriendRequestForm" action="/addFriend" method="post">
+                <form id="sendFriendRequestForm-{{id}}" action="/addFriend" method="post">
                     <div class="centerLogin">
-                        <input type="hidden" id="receiverUsername" name="username" value="{{this.userName}}">
-                        <button class="homeButton" type="submit" id="addFriendButton">Add as Friend</button>
+                        <input type="hidden" id="receiverUsername-{{id}}" name="username" value="{{this.userName}}">
+                        <button class="homeButton" type="submit" id="addFriendButton-{{id}}">Add as Friend</button>
                     </div>
                    
                 </form>
                  <div class="centerLogin">
-                        <button class="homeButton" onclick="location.href='/viewSearchCollections/{{this.userName}}';" type="submit" id="viewSearchCollectionBtn">View Collection</button>
+                        <button class="homeButton" onclick="location.href='/viewSearchCollections/{{this.userName}}';" type="submit" id="viewSearchCollectionBtn-{{id}}">View Collection</button>
                 </div>
             </div>
         {{/each}}
