--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Pokemon TCG</title>
-  <link rel="stylesheet" href="../../public/css/styles.css" />
-  <link rel="icon" type="image/png" href="../../public/images/Pokéball.png" />
+  <link rel="stylesheet" href="../../public/css/styles.css">
+  <link rel="icon" type="image/png" href="../../public/images/Pokéball.png">
 
 </head>
 
